@@ -32,19 +32,6 @@ operator|.
 name|Set
 import|;
 end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|Directory
-import|;
-end_import
 begin_comment
 comment|/**<p>This class implements a {@link MergePolicy} that tries  *  to merge segments into levels of exponentially  *  increasing size, where each level has< mergeFactor  *  segments in it.  Whenever a given levle has mergeFactor  *  segments or more in it, they will be merged.</p>  *  *<p>This class is abstract and requires a subclass to  * define the {@link #size} method which specifies how a  * segment's size is determined.  {@link LogDocMergePolicy}  * is one subclass that measures size by document count in  * the segment.  {@link LogByteSizeMergePolicy} is another  * subclass that measures size as the total byte size of the  * file(s) for the segment.</p>  */
 end_comment
@@ -109,6 +96,14 @@ name|int
 name|maxMergeDocs
 init|=
 name|DEFAULT_MAX_MERGE_DOCS
+decl_stmt|;
+comment|/* TODO 3.0: change this default to true */
+DECL|field|calibrateSizeByDeletes
+specifier|protected
+name|boolean
+name|calibrateSizeByDeletes
+init|=
+literal|false
 decl_stmt|;
 DECL|field|useCompoundFile
 specifier|private
@@ -298,6 +293,34 @@ return|return
 name|useCompoundDocStore
 return|;
 block|}
+comment|/** Sets whether the segment size should be calibrated by    *  the number of deletes when choosing segments for merge. */
+DECL|method|setCalibrateSizeByDeletes
+specifier|public
+name|void
+name|setCalibrateSizeByDeletes
+parameter_list|(
+name|boolean
+name|calibrateSizeByDeletes
+parameter_list|)
+block|{
+name|this
+operator|.
+name|calibrateSizeByDeletes
+operator|=
+name|calibrateSizeByDeletes
+expr_stmt|;
+block|}
+comment|/** Returns true if the segment size should be calibrated     *  by the number of deletes when choosing segments for merge. */
+DECL|method|getCalibrateSizeByDeletes
+specifier|public
+name|boolean
+name|getCalibrateSizeByDeletes
+parameter_list|()
+block|{
+return|return
+name|calibrateSizeByDeletes
+return|;
+block|}
 DECL|method|close
 specifier|public
 name|void
@@ -316,6 +339,136 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
+DECL|method|sizeDocs
+specifier|protected
+name|long
+name|sizeDocs
+parameter_list|(
+name|SegmentInfo
+name|info
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|calibrateSizeByDeletes
+condition|)
+block|{
+return|return
+operator|(
+name|info
+operator|.
+name|docCount
+operator|-
+operator|(
+name|long
+operator|)
+name|info
+operator|.
+name|getDelCount
+argument_list|()
+operator|)
+return|;
+block|}
+else|else
+block|{
+return|return
+name|info
+operator|.
+name|docCount
+return|;
+block|}
+block|}
+DECL|method|sizeBytes
+specifier|protected
+name|long
+name|sizeBytes
+parameter_list|(
+name|SegmentInfo
+name|info
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|long
+name|byteSize
+init|=
+name|info
+operator|.
+name|sizeInBytes
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|calibrateSizeByDeletes
+condition|)
+block|{
+name|float
+name|delRatio
+init|=
+operator|(
+name|info
+operator|.
+name|docCount
+operator|<=
+literal|0
+condition|?
+literal|0.0f
+else|:
+operator|(
+operator|(
+name|float
+operator|)
+name|info
+operator|.
+name|getDelCount
+argument_list|()
+operator|/
+operator|(
+name|float
+operator|)
+name|info
+operator|.
+name|docCount
+operator|)
+operator|)
+decl_stmt|;
+return|return
+operator|(
+name|info
+operator|.
+name|docCount
+operator|<=
+literal|0
+condition|?
+name|byteSize
+else|:
+call|(
+name|long
+call|)
+argument_list|(
+operator|(
+name|float
+operator|)
+name|byteSize
+operator|*
+operator|(
+literal|1.0f
+operator|-
+name|delRatio
+operator|)
+argument_list|)
+operator|)
+return|;
+block|}
+else|else
+block|{
+return|return
+name|byteSize
+return|;
+block|}
+block|}
 DECL|method|isOptimized
 specifier|private
 name|boolean
@@ -1208,15 +1361,6 @@ argument_list|(
 name|mergeFactor
 argument_list|)
 decl_stmt|;
-specifier|final
-name|Directory
-name|directory
-init|=
-name|writer
-operator|.
-name|getDirectory
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -1546,9 +1690,10 @@ argument_list|)
 operator|>=
 name|maxMergeSize
 operator|||
+name|sizeDocs
+argument_list|(
 name|info
-operator|.
-name|docCount
+argument_list|)
 operator|>=
 name|maxMergeDocs
 operator|)
